[gd_scene load_steps=9 format=1]

[ext_resource path="res://scripts/final_game.gd" type="Script" id=1]
[ext_resource path="res://assets/background.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/foo60.fnt" type="BitmapFont" id=3]
[ext_resource path="res://assets/fonts/foo40.fnt" type="BitmapFont" id=4]
[ext_resource path="res://scripts/game_over.gd" type="Script" id=5]
[ext_resource path="res://assets/fonts/foo120.fnt" type="BitmapFont" id=6]
[ext_resource path="res://scenes/freeze.tscn" type="PackedScene" id=7]
[ext_resource path="res://sounds/Joy Ride.ogg" type="AudioStream" id=8]

[node name="game" type="Node2D"]

script/script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]

transform/pos = Vector2( 629.988, 362.311 )
transform/scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 2 )

[node name="chickenGenerator" type="Timer" parent="."]

process_mode = 1
wait_time = 10.0
one_shot = false
autostart = true

[node name="control" type="Control" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="score" type="Label" parent="control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 600.0
margin/top = 21.0
margin/right = 695.0
margin/bottom = 153.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.976562, 0.953674, 0.953674, 1 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="high_score" type="Label" parent="control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1230.0
margin/top = 16.0
margin/right = 1262.0
margin/bottom = 60.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.976562, 0.953674, 0.953674, 1 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lMax" type="Label" parent="control"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1108.0
margin/top = 34.0
margin/right = 1307.0
margin/bottom = 80.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.976562, 0.953674, 0.953674, 1 )
text = "RECORD"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="life" type="Label" parent="control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1231.0
margin/top = 54.0
margin/right = 1263.0
margin/bottom = 98.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lLife" type="Label" parent="control"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1134.0
margin/top = 65.0
margin/right = 1273.0
margin/bottom = 109.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.976562, 0.953674, 0.953674, 1 )
text = "LIFES"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="gameOver" type="Control" parent="."]

editor/display_folded = true
visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 5 )

[node name="label" type="Label" parent="gameOver"]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -216.0
margin/top = 115.0
margin/right = -1020.0
margin/bottom = 247.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.617188, 0.0602722, 0.0602722, 1 )
text = "GAME_OVER"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="retry" type="Label" parent="gameOver"]

visibility/visible = false
anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -216.0
margin/top = 449.0
margin/right = -1021.0
margin/bottom = 549.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.0732422, 0.75, 0.11554, 1 )
text = "RETRY"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="timer" type="Timer" parent="gameOver"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = false

[node name="freeze" parent="." instance=ExtResource( 7 )]

transform/pos = Vector2( 59.3885, 663.984 )
transform/scale = Vector2( 0.8, 0.8 )

[node name="game_sound" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 8 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="timeout" from="chickenGenerator" to="." method="_on_ChickenGenerator_timeout"]

[connection signal="timeout" from="gameOver/timer" to="gameOver" method="_on_Timer_timeout"]


